src/objects/XLR8_Contacts_Related_to_Entity__c.object
<CustomObject>
    <description>XLR8 custom object that defines the relationship between an entity and indirect contacts (i.e. professionals).</description>
    <fields>
        <fullName>ACR_Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiduciary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantor/Trustor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <formula>Contact__r.Business_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entities Related to This Contact</relationshipLabel>
        <relationshipName>R00N40000001YuLzEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts_Entity__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Contact&apos;s Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001YuM0EAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Contact__r.HomePhone</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <label>Contacts Related to Entity</label>
    <nameField>
        <displayFormat>CRE{00000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Related to Entity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>